--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,12 @@ and replace the line 3 with its contents %>
 
     <h1>Welcome to the Node and Express Demo</h1>
 
+    <!-- in an img tag, the src as attribute is used to get the
+    image that will be loaded. the path given to src should begin after your
+    project's domain (e.g. http://localhost:5001 ). Write the path to the
+    image as it appears inside the static folder (public in this app). -->
+    <img src='/images/pug-bunny.jpg'/>
+
 <%- include('partials/footer') %>
 
 <%# seperating the top and bottom html that is common to all our pages into
