--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Node and Express Demo</title>
+    <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
