Add posts router with index, new and create routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,3 +6,5 @@
     <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
+    <a href="/posts">Posts</a> |
+    <a href="/posts/new">New Posts</a> <br/>
