--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,114 @@
+
 html {
   font-family: Helvetica, sans-serif;
+  font-weight: 100;
+}
+
+body {
+  margin: 8% 0 0 0;
+}
+
+
+h1 {
+  font-weight: inherit;
+  text-align: center;
+  margin:0px auto;
+  font-size:42px;
+  color:black;
+  display:block;
+}
+
+h2 {
+  font-weight: inherit;
+  text-align: left;
+  margin:0px auto;
+  font-size:20px;
+  color:black;
+  display:block;
+}
+
+
+h3 {
+  font-weight: inherit;
+  text-align: left;
+  margin:0px auto;
+  font-size:12px;
+  color:black;
+  display:block;
+}
+
+.homepage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: bold;
+  position: relative;
+  top: 300px
+
+}
+
+body {
+  background-color:white ;
+
+}
+
+
+header {
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+}
+
+header > nav {
+  height: 100%;
+  background-color: white;
+  border-bottom: thin solid black;
+  padding: 0 20px;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+}
+
+
+.nav-brand {
+  margin-left: auto;
+}
+
+.nav-logo {
+  height: 1.8em;
+}
+
+.nav-logo > img {
+  /* same height as the header text
+   * width will size to maintain aspect-ratio of the source
+   * image */
+  height: 100%;
+}
+
+.row{
+  border: thin solid black;
+  margin: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+
+.form-group{
+  margin:10px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  background-color: white;
+
+}
+
+@media only screen and (max-width: 1000px) {
+  .col-md-4 {
+    display: none;
+  }
 }
