--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Node and Express Demo</title>
-    <link rel="stylesheet" href="/css/index.css">
-  </head>
-  <body>
-    <a href="/posts">Posts</a> |
-    <a href="/posts/new">New Posts</a> <br/>
+    <title>Home Page</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/css/index.css"
+    type="text/css" media="screen" charset="utf-8">
+
+
+</head>
+
+<body>
+  <header style="z-index:">
+    <nav>
+      <a class="nav-logo"><img src="images/awesomeface.jpg" style="
+        width: 5%;
+        height: auto;
+        "></img></a>
+      <a href="/" class="navbar-brand navbar-right">Home</a>
+      <a href="/posts" class="navbar-brand navbar-right">Dashboard</a>
+      <a class="nav-menu"><i class="fa fa-bars"></i></a>
+    </nav>
+  </header>
